--- a/index.html
+++ b/index.html
@@ -26,13 +26,9 @@
     </div>
   </div>
 
-  <!-- Modal  -->
+  <!-- Modal -->
   <div class="modal">
-    <div id="result" class="modal-content">
-      <h1>You Win</h1>
-      <i class="fas fa-hand-rock fa-10x"></i>
-      <p>Computer chose rock</p>
-    </div>
+    <div id="result" class="modal-content"></div>
   </div>
 
 
